[project]
name = "supply-chain-agent"
version = "0.1.0"
description = "A multi-agent system for supply chain management."
authors = [{ name = "Roo", email = "roo@agent.com" }]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "fastapi",
    "uvicorn",
    "crewai[google-genai,tools]>=1.2.0",
    "python-dotenv",
    "google-generativeai",
    "crewai-tools[mcp]>=1.2.0",
    "numpy",
    "scipy",
    "simpy",
    "pulp",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "."

[tool.uv.sources]
supply-chain-agent = { path = "." }
